--- a/css/blocks/_header.scss
+++ b/css/blocks/_header.scss
@@ -6,44 +6,61 @@
     justify-content: space-between;
     padding: 1.3889vw 2.7778vw;
 
+    @include desktop-L{
+        margin-left: 250px;
+        padding: 20px 40px;
+    }
+
     &__section-name{
-        font-size: 1.9444vw;
+        font-size: 28px;
         font-weight: 600;
     }
 
     &__body{
         display: flex;
-        gap: 2.0833vw;
+        gap: min(30px, 2.0833vw);
         align-items: center;
     }
 
     &__search{
         width: 17.7083vw;
+        max-width: 255px;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
 
         &-field{
             width: 100%;
             background: var(--color-gray);
             color: inherit;
             padding: 1.1111vw 2.9861vw 1.1111vw 4.1667vw;
-            border-radius: 2.7778vw;
-            font-size: 1.0417vw;
+            border-radius: 40px;
+            font-size: min(15px, 1.0417vw);
             &::placeholder{
-                font-size: 1.0417vw;
+                font-size: min(15px, 1.0417vw);
             }
 
             &:focus{
                 outline: 1px  solid var(--color-yellow);
+            }
+
+            @include desktop-L{
+                padding: 16px 42px 16px 60px;
             }
         }
 
         &-button{
             position: absolute;
             width: 1.3194vw;
+            max-width: 19px;
             aspect-ratio: 1;
-            left:1.7660vw;
+            left:10%;
             top: 50%;
             transform: translateY(-50%);
+            display: flex;
+            align-items: center;
             svg{
                 path{
                     transition: 0.3s;
@@ -62,14 +79,16 @@
 
     &__button{
         background: var(--color-gray);
-        padding: 0.9028vw;
-        border-radius: 50px;
+        padding: min(13px, 0.9028vw);
+        border-radius: 50%;
         box-sizing: content-box;
         width: 1.7361vw;
+        max-width: 25px;
         aspect-ratio: 1;
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: 0.3s;
 
         img{
             width: 100%;
@@ -84,6 +103,7 @@
         img{
             border-radius: 50%;
             width: 4.1667vw;
+            max-width: 60px;
         }
 
         @include hover{
