--- a/css/blocks/_transactions.scss
+++ b/css/blocks/_transactions.scss
@@ -3,6 +3,7 @@
         padding: min(25px, 1.7361vw);
         width: 24.3056vw;
         max-width: 350px;
+        height: min(16.3194vw, 235px);
     }
 
     &__item{
