--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,6 +5,7 @@
     --color-green: #41D4A8;
     --color-red:#FF4B4A;
     --color-blue: #1814F3;
+    --color-blue-hover:#120fbd;
     --color-dark-blue: #343C6A;
     --color-gray-icons: #718EBF;
     --color-yellow: #FFBB38;
