--- a/css/blocks/_activity.scss
+++ b/css/blocks/_activity.scss
@@ -1,11 +1,7 @@
 .activity{
     &__body{
-        padding: 28px 30px;
-        height: min(322px, 22.3611vw);
+        height: 322px
         
-    }
-    &__chart-container{
-        color: red !important;
     }
 
 }
