--- a/css/blocks/_stock.scss
+++ b/css/blocks/_stock.scss
@@ -2,6 +2,7 @@
     &__body{
         padding-block: 25px;
         padding-inline: min(30px, 2.0833vw);
+        height: 322px;
     }
     &__table{
         width: 100%;
