--- a/css/blocks/_element.scss
+++ b/css/blocks/_element.scss
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: min(19.5833vw, 282px);
-    margin-bottom: 24px;
     gap: min(20px, 1.3889vw);
 
     &_wide{
@@ -38,12 +36,10 @@
     }
 
     &_chart{
-        padding:  28px 30px;
+        padding: min(28px, 1.9444vw) min(30px, 2.0833vw);
         display: flex;
         justify-content: center;
     }
 
-    &_constant-height{
-        min-height: 261px;
-    }
+
 }
