--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,2 +1,2 @@
 @import 'variables', 'media', 'mixins', 'globals';
-@import 'blocks/navigation', 'blocks/header', 'blocks/element', 'blocks/card', 'blocks/cards', 'blocks/transactions', 'blocks/activity', 'blocks/stock';
+@import 'blocks/navigation', 'blocks/header', 'blocks/element', 'blocks/card', 'blocks/cards', 'blocks/transactions', 'blocks/activity', 'blocks/stock', 'blocks/balance', 'blocks/transfer';
